--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -5,9 +5,9 @@
   </div>
 
   <div class="job-meta-details">
-    <p class="job-list-container-header">{{job.translated.name}}</p>
+    <p class="job-list-container-header">{{job.translatedText.name}}</p>
     <p class="adress-field" >
-      <i class="fa fa-map-marker" aria-hidden="true"></i>  {{job.address}}
+      <i class="fa fa-map-marker" aria-hidden="true"></i>  {{job.fullStreetAddress}}
     </p>
 
     <div class="row">
