--- a/src/app/views/my-jobs/my-jobs.component.html
+++ b/src/app/views/my-jobs/my-jobs.component.html
@@ -18,6 +18,6 @@
   </div>
 
   <div class="row" style="background-color: white;">
-    <user-jobs [selectedState]="selectedState"></user-jobs>
+    <applications [selectedState]="selectedState"></applications>
   </div>
 </div>
