Proxy and model refactoring done

--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -61,7 +61,7 @@
   </h3>
 
   <system-language-input
-    [control]="registerForm.controls['language']"
+    [control]="registerForm.controls['system_language_id']"
     [apiErrors]="apiErrors">
   </system-language-input>
 
