--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -79,7 +79,7 @@
 
   <system-language-input
     [apiErrors]="apiErrors"
-    [control]="settingsForm.controls['language_id']">
+    [control]="settingsForm.controls['system_language_id']">
   </system-language-input>
 
   <h3 class="ui horizontal divider pink header">
