Confirmation modals replacing the confirmation view

--- a/src/app/styles/bootstrap-modifications.scss
+++ b/src/app/styles/bootstrap-modifications.scss
@@ -7,3 +7,10 @@
   padding-left: 0;
   padding-right: 0;
 }
+
+.modal {
+  bottom: inherit;
+  right: inherit;
+  overflow: inherit;
+  outline: inherit;
+}
