Do not let modals overlap the header

--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -14,6 +14,12 @@
   padding: 1rem 1rem !important;
 }
 
+
+.modals.dimmer .ui.scrolling.modal {
+    margin-top: 5rem!important;
+    margin-bottom: 1rem!important;
+}
+
 // Force icon sizes if specified
 i.mini.icon, i.mini.icons {
     font-size: .4em !important;
