z index changes. Modal dimmer overlaps navbar which overlaps basic dimmer

--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -3,7 +3,7 @@
   #form="ngForm"
   class="ui form">
   <sm-loader
-    [complete]="!loadingSubmit"
+    [complete]="loadingSubmit"
     class="inverted"
     text="{{'component.loading' | translate}}">
   </sm-loader>
