--- a/src/app/styles/semantic-ui-modifications.scss
+++ b/src/app/styles/semantic-ui-modifications.scss
@@ -1,3 +1,5 @@
+@import './dimensions';
+
 .ui.grid {
   margin: 0;
 }
@@ -14,10 +16,8 @@
   padding: 1rem 1rem !important;
 }
 
-
-.modals.dimmer .ui.scrolling.modal {
-    margin-top: 5rem!important;
-    margin-bottom: 1rem!important;
+.modals.dimmer {
+  z-index: 1002!important;
 }
 
 // Force icon sizes if specified
