Added modals for apply for job steps

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -20,6 +20,7 @@
 
   <form-submit-button
     [buttonText]="'login.form.submit.button' | translate"
+    [showButton]="showSubmitButton"
     [submitFail]="submitFail"
     [submitSuccess]="submitSuccess">
     <div>
