Removal of loading component text on most components.

--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -4,8 +4,7 @@
   class="ui form">
   <sm-loader
     [complete]="!loadingSubmit"
-    class="inverted"
-    text="{{'component.loading' | translate}}">
+    class="inverted">
   </sm-loader>
 
   <email-or-phone-input
