--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -5,8 +5,7 @@
 
   <sm-loader
     [complete]="!loadingSubmit"
-    class="inverted"
-    text="{{'component.loading' | translate}}">
+    class="inverted">
   </sm-loader>
 
   <h3 class="ui horizontal divider pink header">
