--- a/src/app/components/menus/navigation-menu/navigation-menu.component.scss
+++ b/src/app/components/menus/navigation-menu/navigation-menu.component.scss
@@ -1,7 +1,12 @@
 @import '../../../styles/colors';
+@import '../../../styles/dimensions';
 
 .navigation-menu-container {
+  pointer-events: auto;
+  background-color: $color-gray-25 !important;
   height: 100%;
+  text-align: center;
+
   .navigation-menu-links-container {
     margin-top: 20px;
 
