--- a/src/app/components/navbars/app-navbar/app-navbar.component.scss
+++ b/src/app/components/navbars/app-navbar/app-navbar.component.scss
@@ -1,6 +1,7 @@
 @import '../../../styles/colors';
 
 .app-navbar-container {
+  pointer-events: auto;
   width: 100%;
   height: 54px;
   border-radius: 0;
