--- a/src/app/components/navigations/default-navigation/default-navigation.component.scss
+++ b/src/app/components/navigations/default-navigation/default-navigation.component.scss
@@ -6,6 +6,9 @@
   right: 0;
   left: 0;
   z-index: 1001;
+  pointer-events: none;
+  height: 100%;
+
   @media screen and (min-width: $lg-device-width) {
     width: $lg-device-width;
     margin: 0 auto;
@@ -15,22 +18,15 @@
     max-width: 100vw;
   }
 
-  .menu-overlay-container {
+  .menu-container {
     height: 100%;
-    background: rgba(255, 255, 255, .5);
-    text-align: right;
+  }
 
-    .menu-container {
-      overflow-y: scroll;
-      background: $color-gray-25;
-      height: 100%;
-      width: 375px;
-      display: inline-block;
-      text-align: left;
-      color: white;
-      @media screen and (max-width: $sm-device-width) {
-        width: 100%;
-      }
+  .pusher {
+    position: absolute;
+    width: 100vw;
+    &.dimmed {
+      pointer-events: auto;
     }
   }
 }
